@@ -11,6 +11,8 @@ Release @version@-@release@ Start 27/04/2023 End XX/XX/XXXX
 03. supervise.c: fixed waitpid returning EINVAL on OSX
 04. supervise.c: disable warning message if pid does not exist
 05. svscan.c: turn on verbose, silent using env variables VERBOSE, SILENT
+- 01/07/2023
+06. minisvc.in: skip indimail-mta variables when creating svscan service
 
 * Sun Apr 23 2023 17:05:00 +0000 Manvendra Bhangui <daemontools@indimail.org> 1.1.2-1.1%{?dist}
 Release 1.1.2-1.1 Start 20/02/2023 End 23/04/2023
@@ -63,7 +65,7 @@ o set sticky bit on run file to run in subreaper mode
 * Mon Jan 30 2023 13:14:56 +0000 Manvendra Bhangui <daemontools@indimail.org> 1.1.1-1.1%{?dist}
 Release 1.1.1 Start 12/09/2022 End 30/11/2023
 ======= Release Highlights ================================================
-o added auto-start, auto-stop feature based on presence/absense of down file
+o added auto-start, auto-stop feature based on presence/absence of down file
 o added subreaper functionality - ability to reap grandchilds
 ===========================================================================
 - 12/09/2022
